Details
-
Bug
-
Resolution: Done
-
P2: Important
-
6.4.0
-
None
-
49e8c08756 (qt/qthttpserver/dev)
-
Foundation Sprint 68
Description
Expect header is a mandatory feature of HTTP/1.1. Currently the server does not handle it at all, so clients using this feature will end up waiting for "100 Continue" response until a client timeout or forever if that is not implemented.
Attachments
For Gerrit Dashboard: QTBUG-107854 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
440065,2 | QHttpServerRequest: Handle requests with "Expect: 100-continue" header | dev | qt/qthttpserver | Status: MERGED | +2 | 0 |